--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "dotenv": "^16.0.3",
+    "joi": "^17.7.0",
     "mongoose": "^6.8.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
