--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
     environment:
       - PORT=3000
       - MONGO_CONNECTION=mongodb://root:example@mongo:27017/
-      # - DB_USERNAME=root
+      - SECRET_JWT=asd79kmr
+      - TIME_JWT=60s
       # - DB_PASSWORD=example
       # - DB_NAME=library
       # - NODE_ENV=production
